--- a/DougBot/DougBot.csproj
+++ b/DougBot/DougBot.csproj
@@ -8,6 +8,19 @@
   <ItemGroup>
     <PackageReference Include="Discord.Net" Version="2.0.0-beta" />
     <PackageReference Include="Discord.Net.Providers.WS4Net" Version="2.0.0-beta" />
+    <PackageReference Include="MySql.Data" Version="8.0.10-rc" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="System">
+      <HintPath>System</HintPath>
+    </Reference>
+    <Reference Include="System.Data">
+      <HintPath>System.Data</HintPath>
+    </Reference>
+    <Reference Include="System.Xml">
+      <HintPath>System.Xml</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
