--- a/DougBot/DougBot.csproj
+++ b/DougBot/DougBot.csproj
@@ -8,7 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Discord.Net" Version="2.0.0-beta" />
     <PackageReference Include="Discord.Net.Providers.WS4Net" Version="2.0.0-beta" />
-    <PackageReference Include="MySql.Data" Version="8.0.10-rc" />
+    <PackageReference Include="System.Data.SQLite.Core" Version="1.0.108" />
   </ItemGroup>
 
   <ItemGroup>
